Connecting to mysql on docker and postgresql on Elephant.com

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,25 @@
-spring.datasource.generate-unique-name=false
-spring.datasource.name=java2022
+#H2
+#spring.datasource.url=jdbc:h2:file:C:\\Users\\pc\\eclipse-workspace\\h2java2022
+#spring.datasource.generate-unique-name=false
+#spring.datasource.name=java2022
 
+#spring.datasource.url=jdbc:mysql://172.21.240.1:3306/persons
+#spring.datasource.generate-unique-name=false
+#spring.datasource.username=root
+#spring.datasource.password=1234
+
+#spring.datasource.url=jdbc:postgres://lkqxyexf:jqqlcSJKYj8OB5uYayv4qdjhvmseZjko@peanut.db.elephantsql.com/lkqxyexf
+#spring.datasource.generate-unique-name=false
+#spring.datasource.username=lkqxyexf
+#spring.datasource.password=jqqlcSJKYj8OB5uYayv4qdjhvmseZjko
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://peanut.db.elephantsql.com:5432/person-service
+spring.datasource.url=jdbc:postgresql://peanut.db.elephantsql.com:5432/lkqxyexf
+spring.datasource.generate-unique-name=false
+spring.datasource.username=lkqxyexf
+spring.datasource.password=jqqlcSJKYj8OB5uYayv4qdjhvmseZjko
+
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
